[package]
name = "spider-downloader"
version = "0.2.1"
edition = "2024"
description = "Downloader component for the spider-lib web scraping framework"
license = "MIT"
documentation = "https://docs.rs/spider-downloader"
homepage = "https://github.com/spider-lib/spider-downloader"
repository = "https://github.com/spider-lib/spider-downloader"
readme = "README.md"

[dependencies]
async-trait = "0.1"
bytes = { version = "1.11.1", features = ["serde"] }
http = "1.4.0"
reqwest = { version = "0.13.2", features = ["json", "stream", "multipart", "form", "native-tls"], default-features = false }
serde_json = "1.0.149"
spider-util = { version = "0.1.7", path = "../spider-util" }
tokio = { version = "1.0", features = ["sync", "rt", "time"] }
log = "0.4"

[features]
